@@ -1,3 +1,10 @@
+2000-07-12  John Tobey  <jtobey@john-edwin-tobey.org>
+
+	* pickle.hh, interpreter.cc, scalar.cc: replaced
+	List::get_arrayref with operators Arrayref& and const Arrayref&.
+
+	* pickle.pod: added XS example.
+
 2000-06-27  John Tobey  <jtobey@john-edwin-tobey.org>
 
 	* Release 0.3.  What happened to 0.2?  Well, the major changes are
